# automated-computer-testing

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.txt  main.py  pyproject.toml  release-please-config.json
.claude/commands/: lint.md
.github/workflows/: build-windows.yml  pr-title-check.yml  release-please.yml  release.yml
assets/: icon.icns
docs/superpowers/plans/: 2026-03-16-settings-modal-and-advanced-mode.md  2026-03-18-settings-styling.md  2026-03-21-phase3-settings-persistence.md  2026-03-21-phase4-stop-cancel.md  2026-03-21-theming-color-tokens.md  2026-03-22-cpu-temp-chart.md
docs/superpowers/specs/: 2026-03-15-dashboard-redesign-design.md  2026-03-16-settings-modal-and-advanced-mode-redesign.md  2026-03-17-settings-styling-design.md  2026-03-19-phase1-design-system.md  2026-03-19-phase2-dashboard.md  2026-03-21-phase3-settings-persistence.md  2026-03-21-phase4-stop-cancel.md  2026-03-22-cpu-temp-chart.md
scripts/: build-iso.sh  build-linux.sh  build-macos-intel.sh  build-macos.sh  build-windows.bat  create-usb.bat  create-usb.sh  create_usb.ps1  create_usb.sh  debug_windows_data.ps1
scripts/iso-config/auto/: config
src/: app.py  cli.py  config.py  thresholds.py
src/models/: __init__.py  job.py  report.py  settings.py  test_result.py
src/report/: diff.py  generator.py  html_render.py  pdf_render.py
src/report/templates/: comparison.html.j2  report.html.j2
src/tests/: base.py  battery.py  cpu.py  display.py  fan.py  gpu.py  manual.py  network.py  ram.py  ram_extended.py  smart_deep.py  storage.py  system_info.py
src/tests/manual/: __init__.py  hdmi.py  keyboard.py  lcd.py  runner.py  speakers.py  touchpad.py  usb_a.py  usb_c.py  webcam.py
src/ui/: _display_helper.py  _hdmi_helper.py  _keyboard_helper.py  _speakers_helper.py  _touchpad_helper.py  _usb_helper.py  _webcam_helper.py  app_window.py  stylesheet.py  workers.py
src/ui/helpers/: __init__.py  _utils.py  display_dialog.py  hdmi_dialog.py  keyboard_dialog.py  speakers_dialog.py  touchpad_dialog.py  usb_dialog.py  webcam_dialog.py
src/ui/keyboards/: full_us.xml  macbook_us.xml  tkl_us.xml
src/ui/pages/: job_setup_page.py  main_dashboard.py  test_dashboard_page.py
src/ui/screens/: dashboard.py  display_test.py  keyboard_test.py  manual_tests.py  mode_select.py  readiness.py  report_done.py  welcome.py
src/ui/widgets/: category_section.py  dashboard_card.py  device_banner.py  header_bar.py  keyboard_widget.py  progress_bar.py  report_options_panel.py  settings_dialog.py  system_info_panel.py  temp_chart_widget.py  test_card.py  test_section_list.py  toggle_switch.py  update_dialog.py
src/utils/: file_manager.py  lhm_sensor.py  platform_detect.py  prefs.py  term_detect.py  theme_prefs.py  updater.py
(+7 files in other folders)
