[project]
name = "touchstone"
version = "0.2.0"
description = "Portable PC hardware diagnostic tool for repair technicians"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.7",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
    "pySMART>=1.3.0",
    "GPUtil>=1.4.0",
    "nvidia-ml-py>=12.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    # Windows-only — UV installs this automatically on Windows, skips it elsewhere
    "wmi>=1.5.1; sys_platform == 'win32'",
    # Webcam helper — live camera preview via OpenCV.
    # No win_arm64 wheel exists; webcam_dialog.py handles ImportError gracefully.
    "opencv-python>=4.8.0; sys_platform != 'win32' or platform_machine != 'ARM64'",
]

[project.scripts]
# Run the app with: uv run touchstone
touchstone = "src.cli:main"

[dependency-groups]
# Install build tools with: uv sync --group build
build = ["pyinstaller>=6.0.0"]
# Install lint tools with: uv sync --group lint
lint = ["ruff>=0.9.0", "ty>=0.0.1a7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include src/ package and the Jinja2 templates inside it
packages = ["src"]

[tool.uv]
# Keep the lockfile up to date with all dependency groups
default-groups = []

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501"]                                     # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.13"
